# sheily-final

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUDITORIA_CORREGIDA.md  AUDITORIA_DEFINITIVA_COMPLETA.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RESUMEN_EJECUTIVO_AUDITORIA.md  SECURITY.md  audit_security_scan.json  docker-compose.yml  enterprise_audit.py  enterprise_audit_report.json  enterprise_audit_report.md  instalar_python.bat  pyproject.toml  pytest.ini  quick_start.py  requirements.txt  setup.py  start_rag_service.py
.github/workflows/: ci-cd.yml  ci.yml  nightly.yml
all-Branches/antropologia/: __init__.py  branch_manager.py  evaluation_results.json  incremental_training_results.json  model_config.json  real_training_results.json  requirements.txt  training_results.json
all-Branches/universal/: IMPLEMENTACION.md  README.md  TRAINING_QUICK_RESULTS.md  __init__.py  migration_antropologia_20251031_145201.json  system_config.json  universal_manager.py
audit/: AUDIT_SYSTEM_ENHANCEMENTS.md  README.md  TEST_STATISTICS.json  TEST_SUITE_DOCUMENTATION.md  TEST_SUITE_INDEX.md  audit_history.json
audit/analysis_results/: README.md
audit/config/: audit_config.json
audit/scripts/: setup_audit_system.py
audit/tests/: README.md  test_app_extended.py  test_audit_system.py  test_config.py  test_core_extended.py  test_embeddings_cache_and_batch.py  test_logger.py  test_rag_extended.py  test_rag_integration.py  test_safety.py  test_training_extended.py  test_training_integration.py
audit/utils/: audit_utils.py
config/: advanced_dream_system.json  auto_learning_config.json  continuous_learning_config.json  dream_system_config.json  file_processing_config.json  human_memory_config.json
config/security/: security_config.json
data/memory/: local_memory.json
development/: audit_project.py  generate_init_files.py  initialize_human_memory_system.py
docs/: NOTAS_DEL_PROYECTO_REAL.md  SECURITY_POLICIES.md
memory/antropologia/: evaluation_results.json  model_config.json  real_training_results.json  training_results.json
monitoring/: prometheus.yml
scripts/: __init__.py
sheily_core/: __init__.py  chat_engine.py  chat_integration.py  config.py  health.py  logger.py  safety.py
sheily_core/blockchain/: __init__.py  rate_limiter.py  secure_key_management.py  sheily_spl_manager.py  sheily_spl_real.py  sheily_token_manager.py  solana_blockchain_real.py  solana_integration.py  spl_data_persistence.py  transaction_monitor.py
sheily_core/chat/: __init__.py  main_chat_sheily.py  sheily_chat_memory_adapter.py  sheily_fast_chat_v3.py  unified_chat_system.py
sheily_train/: README.md  __init__.py  overview.py  train_branch.py
tests/: README.md  __init__.py  conftest.py  test_imports.py
tools/: README.md  complete_project_audit.py  implement_complete_system.py
(+363 files in other folders)
